Tue Mar  4 09:24:40 GMT 2008  Colin Watson  <cjwatson@debian.org>

	* gnulib: Upgrade to 20080301.

Tue Mar  4 09:18:43 GMT 2008  Colin Watson  <cjwatson@debian.org>

	* src/man.c (options): Force --extension to appear after --sections
	  in --help output.

Mon Mar  3 21:46:36 GMT 2008  Colin Watson  <cjwatson@debian.org>

	* man/po4a/po/man-db.pot: Update.

Sun Mar  2 12:41:13 GMT 2008  Colin Watson  <cjwatson@debian.org>

	* po/man-db.pot, po/*.po: Update.

Sun Mar  2 12:37:43 GMT 2008  Colin Watson  <cjwatson@debian.org>

	* src/man.c (options): Describe --recode's argument as ENCODING, not
	  CODE (thanks, Benno Schulenberg).

Sun Mar  2 12:35:28 GMT 2008  Colin Watson  <cjwatson@debian.org>

	* src/man.c (options), src/manpath.c (options), src/whatis.c
	  (options): Use a unified description for --systems (thanks, Benno
	  Schulenberg).

Sun Mar  2 12:29:57 GMT 2008  Colin Watson  <cjwatson@debian.org>

	* src/manconv.c (args_doc, options): Describe argument to -f as
	  "CODE[:...]" rather than "CODE:..." (thanks, Benno Schulenberg).

Sun Mar  2 12:28:40 GMT 2008  Colin Watson  <cjwatson@debian.org>

	* man/man1/man.man1 (OPTIONS): Reorganise into subsections, with
	  options listed in the same order as in 'man --help' output.
	* src/man.c (options, parse_opt): Rearrange a few options slightly
	  so that the ordering makes more sense.

Sun Mar  2 11:56:48 GMT 2008  Colin Watson  <cjwatson@debian.org>

	* man/man1/man.man1, src/encodings.c, src/encodings.h,
	  src/lexgrog_test.c: Update copyright notices.

Sun Mar  2 11:03:21 GMT 2008  Colin Watson  <cjwatson@debian.org>

	Improve 'man -E' to allow overriding the output encoding explicitly,
	rather than implicitly (and unreliably) by changing the *roff device
	(Debian bug #466396).

	* src/encodings.c (device_table): Add stub entries for troff
	  devices.
	  (is_roff_device): New function.
	* src/encodings.h (is_roff_device): Add prototype.
	* src/man.c (options): Change description of -E to allow general