@@ -536,7 +536,7 @@ hierarchy.
 .SS "Finding manual pages"
 .TP
 .BI \-L\  locale ,\ \-\-locale= locale
-.B %man%
+.B %program%
 will normally determine your current locale by a call to the C function
 .BR setlocale (3)
 which interrogates various environment variables, possibly including
@@ -546,7 +546,7 @@ and
 To temporarily override the determined value, use this option to supply a
 .I locale
 string directly to
-.BR %man% .
+.BR %program% .
 Note that it will not take effect until the search for pages actually
 begins.
 Output such as the help message will always be displayed in the initially
