@@ -1,3 +1,13 @@
+Mon Mar 10 01:05:57 GMT 2008  Colin Watson  <cjwatson@debian.org>
+
+	* man/Rules.man (.man1.1, .man8.8): Substitute name of manual page
+	  being processed as %program%.
+	* man/man1/apropos.man1 (OPTIONS), man/man1/man.man1 (Finding manual
+	  pages), man/man1/whatis.man1 (OPTIONS): Consolidate
+	  nearly-identical descriptions of --locale using %program% (thanks,
+	  Robert Luberda).
+	* man/po4a/po/man-db.pot: Update.
+
 Tue Mar  4 09:24:40 GMT 2008  Colin Watson  <cjwatson@debian.org>
 
 	* gnulib: Upgrade to 20080301.
